--- a/index.html
+++ b/index.html
@@ -64,13 +64,16 @@
         font-size: 2.5vh;
         border: 0.5vmin solid grey;
         font-weight: bolder;
-        font-family: "Syne Mono", monospace;
+        
       }
       form input {
-        width: 47vw;
+        width: 60vw;
+        heigth: 35px;
         margin: 0 10px 10px 10px;
         padding-left: 5px;
         font-family: "Syne Mono", monospace;
+        font-size:1em;
+        
       }
 
       h1 {
@@ -151,7 +154,7 @@
       form {
         display: none;
         z-index: 9;
-        width: 50vw;
+        width: 70vw;
         height: max-content;
         background-image: linear-gradient(
           rgb(160, 160, 255),
@@ -160,9 +163,10 @@
         border: 2px solid #000;
         border-radius: 20px;
         padding: 10px;
-        position: sticky;
-        margin-top: -85vh;
-        transition: width 5s, heigth 1s, linear 1s;
+        position: absolute;
+        top:25%;
+        box-sizing: border-box;
+        transition: width 1s, heigth 1s, linear 1s;
         /* margin-left: 23vw; */
       }
       form:hover {
@@ -200,6 +204,9 @@
       #boody {
         filter: blur(8px);
         pointer-events: none;
+      }
+      b{
+       font-family: none;
       }
     </style>
   </head>
@@ -241,7 +248,7 @@
       </div>
     </div>
     <div class="fr">
-      <form id="form">
+      <form id="form"  autocomplete="off">
         <h1>Save your Password</h1>
         <label for="stext">Title</label>
         <div>
